--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+     <!--
+        ,;y%%%kw,     sQQQQQQsw,       ,,sQ%%ky,          ,#%y          ,,sQ%%%s,,
+      #lllllllllll&  $lllllllllllk   ,$llllllllll$,      ,lllll       ,$llllllllll$,
+     $llll*` `"&ll&  lllllllllllll  Alllll`]&*lllllL    /lllllll,    gllllP'` '1ll$"
+    $llll            lllllllllllll  llll"'& L/"]llll   /lllllllll,   llllF
+    $llll            lllllllllllP   lllllg    ;$llll  /lllllllllll,  llllk
+     $lll$w,,,,@ll$  lllll*5llll$,  $lllllg,,slllllF /lllllllllllll, %llllQ,,,,s$llw
+      1lllllllllll$  lllll   &llll   *$llllllllll$` ]llllM*****&llll  "$lllllllllllF
+        `*M&&&A*"     *M*     'MM"      "*N&&R*"     "MM'       "MM"     "*N&&NM*`
+    by git/albertordp
+    -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CROAC</title>
