--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="CROAC, una idea de Alberto Rodríguez">
+    <meta name="robots" content="index, nofollow">
     <title>CROAC</title>
     <link rel="icon" type="image/png" href="favicon.png" sizes="any">
     <style>
@@ -47,11 +49,15 @@
             margin: auto;
             padding: 5rem;
         }
+        .title {
+             display: none;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <a href="mailto:dev@cro.ac"><img  src="logo.png"/></a>
+         <h1 class="title">CROAC</h1>
       </div>      
 </body>
 </html>
