--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             padding: 5rem;
         }
         .title {
-             display: none;
+             display: inline;
+             color: rgba(0,0,0,0);
         }
     </style>
 </head>
