--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         .container {
             width: 100%;
             height: 100%;
-            background: #fff;
+            background: #000;
             min-height: 250px;
             position: relative;
         }
